# CloudCompare

./: .gitmodules
plugins/: CMakeLists_my.txt
plugins/SubSampleTools/: CMakeLists.txt  SubSampleTools.qrc  info.json
plugins/SubSampleTools/include/: CMakeLists.txt  SubSampleTools.h  SubSamplesDlg.h  moc_SubSamplesDlg.cpp
plugins/SubSampleTools/src/: ActionA.cpp  CMakeLists.txt  SubSampleTools.cpp  SubSamplesDlg.cpp
plugins/SubSampleTools2/: CMakeLists.txt  SubSampleTools2.qrc  info.json
plugins/SubSampleTools2/include/: CMakeLists.txt  SubSampleTools2.h  SubSamplesDlg.h  moc_SubSamplesDlg.cpp
plugins/SubSampleTools2/src/: ActionA.cpp  CMakeLists.txt  SubSampleTools2.cpp  SubSamplesDlg.cpp
